Bootstrap separate function, changed ticks for CI and some analysis for EX1

--- a/code/Exercise2.ipynb
+++ b/code/Exercise2.ipynb
@@ -22,12 +22,12 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
+    "import sklearn.linear_model as lm\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.utils import resample\n",
-    "import common\n",
+    "from common import *\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from tqdm import tqdm"
    ],
@@ -40,15 +40,97 @@
    "source": [
     "\n",
     "\n",
-    "np.random.seed(4155)\n",
-    "maxdegree = 10\n",
+    "np.random.seed(SEED_VALUE)\n",
+    "maxdegree = 15\n",
+    "n_bootstraps = 40\n",
     "n = 20\n",
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
     "x,y = np.meshgrid(x,y)\n",
-    "z = common.FrankeFunction(x,y) + 0.2*np.random.normal(0, size = n)\n",
+    "z = FrankeFunction(x,y) + 0.2*np.random.normal(0, size = n)\n",
     "print(type(x))\n",
     "print(x.shape)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Testing bootstrap function"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "polydegree = np.arange(1, maxdegree+1)\n",
+    "MSE_test, MSE_train, bias, variance = bootstrap(x, y, z, maxdegree, n_bootstraps, OLS())\n",
+    "\n",
+    "plt.plot(polydegree, MSE_test,\"m\", label='MSE test')\n",
+    "plt.plot(polydegree, MSE_train,\"c\", label='MSE train')\n",
+    "plt.plot(polydegree, bias,\"b--\", label='bias')\n",
+    "plt.plot(polydegree, variance,\"r--\", label='Variance')\n",
+    "#plt.plot(polydegree, bias+variance,\"g--\", label='bias+variance')\n",
+    "\n",
+    "plt.xlabel(\"Model complexity / Polynomial Degree\")\n",
+    "plt.ylabel(\"Prediction Error - MSE\")\n",
+    "plt.xticks(polydegree)\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.savefig(f\"{REPORT_FIGURES}{EX2}model_complexity_using_bootstrap_function.pdf\")\n",
+    "plt.show()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "MSE_test = np.zeros(maxdegree)\n",
+    "MSE_train = np.zeros(maxdegree)\n",
+    "polydegree = np.arange(1, maxdegree+1)\n",
+    "bias = np.zeros(maxdegree)\n",
+    "variance = np.zeros(maxdegree)\n",
+    "z_flat = z.ravel().reshape(-1,1)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "\n",
+    "for degree in tqdm(range(1, maxdegree+1), desc = f\"Looping through polynomials up to {maxdegree} degrees with {n_bootstraps} bootstraps: \"):\n",
+    "    X = create_X(x, y, n=degree)\n",
+    "\n",
+    "    # Train test split\n",
+    "    X_train, X_test, z_train, z_test = prepare_data(X, z_flat, test_size=0.2, shuffle=True, scale_X=True, scale_t=True, random_state=SEED_VALUE)\n",
+    "\n",
+    "    model = OLS()\n",
+    "    z_hat_trains, z_hat_tests = bootstrapping(X_train, z_train, X_test, z_test, n_bootstraps, model, keep_intercept=True)\n",
+    "\n",
+    "    MSE_test[degree-1] = np.mean( np.mean((z_test - z_hat_tests)**2, axis=1, keepdims=True ))\n",
+    "    MSE_train[degree-1] = np.mean( np.mean((z_train - z_hat_trains)**2, axis=1, keepdims=True ))\n",
+    "    bias[degree-1] = np.mean( (z_test - np.mean(z_hat_tests, axis=1, keepdims=True))**2 )\n",
+    "    variance[degree-1] = np.mean( np.var(z_hat_tests, axis=1, keepdims=True))\n",
+    "\n",
+    "plt.plot(polydegree, MSE_test,\"m\", label='MSE test')\n",
+    "plt.plot(polydegree, MSE_train,\"c\", label='MSE train')\n",
+    "plt.plot(polydegree, bias,\"b--\", label='bias')\n",
+    "plt.plot(polydegree, variance,\"r--\", label='Variance')\n",
+    "#plt.plot(polydegree, bias+variance,\"g--\", label='bias+variance')\n",
+    "\n",
+    "plt.xlabel(\"Model complexity / Polynomial Degree\")\n",
+    "plt.ylabel(\"Prediction Error - MSE\")\n",
+    "plt.xticks(polydegree)\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.savefig(f\"{REPORT_FIGURES}{EX6_2}model_complexity_using_bootstrap.pdf\")\n",
+    "plt.show()"
    ],
    "outputs": [],
    "metadata": {}
@@ -71,11 +153,11 @@
     "for degree in tqdm(range(maxdegree), desc = f\"Looping through polynomials up to {n} degrees with {n_bootstraps} bootstraps: \"):\n",
     "    #model = LinearRegression()\n",
     "    #model= make_pipeline(PolynomialFeatures(degree=degree), LinearRegression(fit_intercept=False)) \n",
-    "    X = common.create_X(x, y, n=degree)\n",
+    "    X = create_X(x, y, n=degree)\n",
     "    #print(f\"X.shape:{X.shape}\")    \n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, z.reshape(-1,1), test_size=0.2, shuffle=True)\n",
+    "    # X_train, X_test, y_train, y_test = train_test_split(X, z.reshape(-1,1), test_size=0.2, shuffle=True)\n",
     "    \n",
-    "    #X_train, X_test, y_train, y_test = common.prepare_data(X, z.reshape(-1,1), scale_X=True, scale_t=True, zero_center=True)\n",
+    "    X_train, X_test, y_train, y_test = prepare_data(X, z.reshape(-1,1), scale_X=False, scale_t=False, zero_center=False)\n",
     "\n",
     "    #print(z.shape)\n",
     "    #reshape for broadcasting in MSE_test and MSE_val  \n",
@@ -97,16 +179,19 @@
     "    y_test = y_test - np.mean(y_test,axis=0)\n",
     "    y_pred = np.empty((y_test.shape[0], n_bootstraps))\n",
     "    y_fit = np.empty((y_train.shape[0], n_bootstraps))\n",
+    "    model = OLS()\n",
     "    \n",
     "    for i in range(n_bootstraps):\n",
     "        #bootstrap:\n",
     "        x_, y_ = resample(X_train, y_train)\n",
     "        #fit model to x_,y_ sample:\n",
-    "        clf =  LinearRegression().fit(x_, y_)\n",
+    "        y_hat_train = model.fit(x_, y_, SVDfit=False)\n",
+    "        t_hat_test = model.predict(X_test)\n",
+    "        #clf = LinearRegression().fit(x_, y_)\n",
     "        #fit model and predict on test data:\n",
-    "        y_pred[:, i] = clf.predict(X_test).ravel()\n",
+    "        y_pred[:, i] = y_hat_train.ravel()\n",
     "        #predict on train data:\n",
-    "        y_fit[:,i] = clf.predict(x_).ravel()\n",
+    "        y_fit[:,i] = t_hat_test.ravel()\n",
     "        \n",
     "\n",
     "    polydegree[degree] = degree\n",
