--- a/code/Exercise3.ipynb
+++ b/code/Exercise3.ipynb
@@ -45,7 +45,8 @@
     "y = np.sort(np.random.uniform(0, 1, n))\n",
     "x,y = np.meshgrid(x,y)\n",
     "\n",
-    "degree = 2\n",
+    "degree = 5\n",
+    "\n",
     "X = create_X(x,y,degree)\n",
     "t = FrankeFunction(x, y) + 0.3*np.random.randn(n)\n",
     "\n",
@@ -55,15 +56,15 @@
     "    sk_model = sk.LinearRegression()\n",
     "    sk_scores = cross_val_score(sk_model, X, t.ravel(), cv=folds, scoring = \"neg_mean_squared_error\")\n",
     "    k_fold_score = np.zeros(folds)\n",
-    "    score = cross_val(k = folds, model = \"OLS\", X = X, z = t)\n",
-    "    print(score)\n",
+    "    score = cross_val(k = folds, model = \"OLS\", X = X, z = t, shuffle=False)\n",
+    "    #print(score)\n",
     "    plt.plot(np.arange(folds), score,\"-o\", label = f\"{folds} folds\")\n",
     "    plt.plot(np.arange(folds), sk_scores*-1,\"--o\", label = f\"{folds} folds(sk.cv)\")\n",
     "    plt.xlabel(\"fold # used as test data\")\n",
     "    plt.ylabel(\"MSE\")\n",
     "    plt.legend()\n",
     "    mean_folds_error[folds-5] = np.mean(score)\n",
-    "    print(sk_scores)\n"
+    "   # print(sk_scores)\n"
    ],
    "outputs": [],
    "metadata": {}
