--- a/code/Exercise4.ipynb
+++ b/code/Exercise4.ipynb
@@ -362,7 +362,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.9.7",
+   "version": "3.8.8",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -374,10 +374,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.7 64-bit"
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "interpreter": {
-   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   "hash": "dca0ade3e726a953b501b15e8e990130d2b7799f14cfd9f4271676035ebe5511"
   }
  },
  "nbformat": 4,
