--- a/code/Exercise2.ipynb
+++ b/code/Exercise2.ipynb
@@ -232,6 +232,7 @@
    "execution_count": null,
    "source": [
     "\n",
+    "\n",
     "n_list = [10, 20, 30, 40, 50]\n",
     "n_bootstraps = 20\n",
     "maxdegree = 12\n",
@@ -241,7 +242,7 @@
     "    x = np.sort(np.random.uniform(0,1,n))\n",
     "    y = np.sort(np.random.uniform(0,1,n))\n",
     "    x,y = np.meshgrid(x,y)\n",
-    "    z = common.FrankeFunction(x, y) + 0.2*np.random.normal(0, size = n)\n",
+    "    z = FrankeFunction(x, y) + 0.2*np.random.normal(0, size = n)\n",
     "\n",
     "    MSE_test_n = np.zeros(maxdegree)\n",
     "    MSE_train_n = np.zeros(maxdegree)\n",
@@ -249,9 +250,9 @@
     "    bias_n = np.zeros(maxdegree)\n",
     "\n",
     "    for degree in tqdm(range(maxdegree), desc = f\"Looping through polynomials up to {maxdegree} degrees with {n_bootstraps} bootstraps: \"):\n",
-    "        model = common.LinearRegression()\n",
+    "        model = LinearRegression()\n",
     "        #model= make_pipeline(PolynomialFeatures(degree=degree), LinearRegression(fit_intercept=False)) \n",
-    "        X = common.create_X(x, y, n=degree)    \n",
+    "        X = create_X(x, y, n=degree)    \n",
     "        X_train, X_test, y_train, y_test = train_test_split(X, z.reshape(-1,1), test_size=0.2)\n",
     "\n",
     "        #reshape for broadcasting in MSE_test and MSE_val  \n",
@@ -331,7 +332,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.9.7",
+   "version": "3.8.8",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -343,10 +344,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.7 64-bit"
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "interpreter": {
-   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   "hash": "dca0ade3e726a953b501b15e8e990130d2b7799f14cfd9f4271676035ebe5511"
   }
  },
  "nbformat": 4,
