Added some to todos

--- a/code/Exercise2.ipynb
+++ b/code/Exercise2.ipynb
@@ -241,7 +241,7 @@
     "    x = np.sort(np.random.uniform(0,1,n))\n",
     "    y = np.sort(np.random.uniform(0,1,n))\n",
     "    x,y = np.meshgrid(x,y)\n",
-    "    z = common.FrankeFunction(x, y) + 0.2*np.random.normal(0, size = n)\n",
+    "    z = FrankeFunction(x, y) + 0.2*np.random.normal(0, size = n)\n",
     "\n",
     "    MSE_test_n = np.zeros(maxdegree)\n",
     "    MSE_train_n = np.zeros(maxdegree)\n",
@@ -249,9 +249,9 @@
     "    bias_n = np.zeros(maxdegree)\n",
     "\n",
     "    for degree in tqdm(range(maxdegree), desc = f\"Looping through polynomials up to {maxdegree} degrees with {n_bootstraps} bootstraps: \"):\n",
-    "        model = common.LinearRegression()\n",
+    "        model = LinearRegression()\n",
     "        #model= make_pipeline(PolynomialFeatures(degree=degree), LinearRegression(fit_intercept=False)) \n",
-    "        X = common.create_X(x, y, n=degree)    \n",
+    "        X = create_X(x, y, n=degree)    \n",
     "        X_train, X_test, y_train, y_test = train_test_split(X, z.reshape(-1,1), test_size=0.2)\n",
     "\n",
     "        #reshape for broadcasting in MSE_test and MSE_val  \n",
