--- a/code/Exercise4.ipynb
+++ b/code/Exercise4.ipynb
@@ -168,11 +168,11 @@
     "z_hat_test_ridge_sk = pd.DataFrame()\n",
     "\n",
     "for lmb in lambdas:\n",
-    "    model_sk = lm.Ridge(lmb, fit_intercept=True)\n",
+    "    model_sk = lm.Ridge(lmb, fit_intercept=False)\n",
     "    #X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X=False, scale_t=False)\n",
     "    X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X=False, scale_t=False, random_state=4155)\n",
     "    model = RidgeRegression(lmb) # The model\n",
-    "    model.fit(X_train, z_train, keep_intercept=False) # Fitting the model\n",
+    "    model.fit(X_train, z_train) # Fitting the model\n",
     "\n",
     "    # Fitting the scikit Ridge model\n",
     "    model_sk.fit(X_train, z_train)\n",
