--- a/code/Exercise2.ipynb
+++ b/code/Exercise2.ipynb
@@ -94,6 +94,7 @@
     "polydegree = np.arange(1, maxdegree+1)\r\n",
     "bias = np.zeros(maxdegree)\r\n",
     "variance = np.zeros(maxdegree)\r\n",
+    "std = np.zeros(maxdegree)\r\n",
     "z_flat = z.ravel().reshape(-1,1)"
    ],
    "outputs": [],
@@ -117,6 +118,7 @@
     "    MSE_train[degree-1] = np.mean( np.mean((z_train - z_hat_trains)**2, axis=1, keepdims=True ))\r\n",
     "    bias[degree-1] = np.mean( (z_test - np.mean(z_hat_tests, axis=1, keepdims=True))**2 )\r\n",
     "    variance[degree-1] = np.mean( np.var(z_hat_tests, axis=1, keepdims=True))\r\n",
+    "    std[degree-1] = np.mean( np.std(z_hat_tests, axis=1, keepdims=True))\r\n",
     "\r\n",
     "plt.plot(polydegree, MSE_test,\"m\", label='MSE test')\r\n",
     "plt.plot(polydegree, MSE_train,\"c\", label='MSE train')\r\n",
@@ -144,6 +146,7 @@
     "df = pd.DataFrame()\r\n",
     "df[\"polynomial_deg\"] = polydegree\r\n",
     "df[\"MSE_test\"] = MSE_test\r\n",
+    "df[\"MSE_std\"] = std\r\n",
     "display(df)\r\n",
     "df.to_csv(f\"{REPORT_DATA}{EX2}bootstrap_test_MSE.csv\")"
    ],
